# strands-copilotkit

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/: main.py
docs/: plan.md
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  agent.ts  index.css
