[project]
name = "strands-copilotkit-backend"
version = "0.1.0"
description = "Strands Agent exposed through AG-UI for CopilotKit"
requires-python = ">=3.12,<3.14"
dependencies = [
    "ag_ui_strands==0.1.9",
    "fastapi>=0.115.12",
    "strands-agents[bedrock]==1.18.0",
    "uvicorn[standard]>=0.34.3",
]

[tool.uv]
package = false
